@@ -34,6 +34,8 @@
         + Added subnet usage result for each subnet in section;
         + Added custom fields for all controllers;
         + New subnets automatically get parent permissions;
+        + Added IP calculation to subnet;
+        + Changed all not_found when searching objects to 404 and all invalid parameters to 409 (conflict)
         + New methods:
             + addresses:
                 GET    /addresses/first_free/{subnetId}/      // returns first available address (subnetId can be provided with parameters)
